# BumpyPatch

./: README.md  readme.md
.catkin_tools/profiles/default/: devel_collisions.txt
code/: make_label.py  model_application.py  pc_to_heightmap_patch.py  run.py
code/bumpypatch_pcl/: CMakeLists.txt  package.xml
code/bumpypatch_pcl/src/: bumpypatch_node.cpp
code/bumpypatch_python/: CMakeLists.txt  package.xml
code/bumpypatch_python/src/: bumpypatch.py  save_image.py
code/bumpypatch_python/srv/: SaveImage.srv
devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: bumpypatch.pc
devel/lib/python3/dist-packages/bumpypatch/: __init__.py
devel/share/bumpypatch/cmake/: bumpypatchConfig.cmake
result/: cropped3.csv  cropped3_label.csv
src/backup/: 0729.txt  0729_2.txt  0730.txt  0801.txt  0812.txt
src/bumpypatch/: CMakeLists.txt
src/bumpypatch/extra codes/: ply_to_pcd.py
src/bumpypatch/for_experiment/: pcd_to_image2.ipynb  ply_read_label.ipynb
src/bumpypatch/launch/: bumpypatch.launch
src/bumpypatch/rviz/: bumpypatch.rviz
src/bumpypatch/src/: bumpypatch_node.py  dbscan_image.py  gabor_kmeans.ipynb  kmeans_image.ipynb  kmeans_image.py
src/bumpypatch/static scene/: gabor_filter.ipynb  pcd_to_image.ipynb  pcd_to_image.py  pcd_to_image2.ipynb  traversable_points.pcd
src/bumpypatch_static/code/evaluation/: segment_eval.ipynb
src/bumpypatch_static/code/point cloud/: model_application.py  run.py
src/bumpypatch_static/result/point_cloud_sample_1/: cropped3_final.csv
src/bumpypatch_static/result/point_cloud_sample_1/ground_truth/: cropped3_object.pcd
src/bumpypatch_static/result/point_cloud_sample_3/: gravel_quarry.csv  gravel_quarry_final.csv  gravel_quarry_label.csv
src/dynamic_scene/for_experiment/: traversable_points_pcd.pcd
src/dynamic_scene/src/: bumpypatch_node.py  gabor_kmeans.ipynb  kmeans_image.py
src/static_scene/code/point cloud/: pc_colorize.py  ply_to_pcd.py
src/static_scene/result/point_cloud_sample_1/ground_truth/: cropped3_ground.pcd
