<?xml version="1.0"?>
<package format="2">
  <name>bumpypatch</name>
  <version>0.0.0</version>
  <description>The bumpypatch package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>  <!-- Add this line -->

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>  <!-- Add this line -->

  <export>
  </export>
</package>
